Worked on app.js to grab data, create dictionary, and display on console.log

--- a/member_form/static/member_form/stylesheets/style.css
+++ b/member_form/static/member_form/stylesheets/style.css
@@ -191,6 +191,12 @@ body {
 	background-color:#34853D;
 }
 
+.required {
+  color: #C72E2E;
+  margin-left: 3%;
+  margin-top: 25px;
+}
+
 
 /* CHECKBOXES -- custom */
 
