--- a/member_form/templates/member_form/index.html
+++ b/member_form/templates/member_form/index.html
@@ -173,5 +173,7 @@
 
 		</div>
 		<script src="{% static 'member_form/scripts/checkbox_patch.js' %}" type="text/javascript"></script>			
+		<script src="{% static 'member_form/scripts/jquery-1.11.3.min.js' %}" type="text/javascript"></script>	
+		<script src="{% static 'member_form/scripts/app.js' %}" type="text/javascript"></script>					
 	</body>
 </html>
