Loops through checkboxes when building formValues object. Adds commented out template for form_values views method.

--- a/member_form/templates/member_form/index.html
+++ b/member_form/templates/member_form/index.html
@@ -129,17 +129,17 @@
 							    <div class="grid__col grid__col--2-of-4">
 
 									<div class='input--item'>
-										<input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" value='infant_toddler'>
+										<input type="checkbox" name="infant_toddler" id="checkboxG4" class="css-checkbox" value='infant_toddler'>
 										<label for="checkboxG4" class="css-label radGroup1 clr">Infant/Toddler (0 -3)</label>
 									</div>
 
 									<div class='input--item'>
-										<input type="checkbox" name="checkboxG5" id="checkboxG5" class="css-checkbox" value='child'>
+										<input type="checkbox" name="child" id="checkboxG5" class="css-checkbox" value='child'>
 										<label for="checkboxG5" class="css-label radGroup1 clr">Child (4 - 12)</label>
 									</div>
 
 									<div class='input--item'>
-										<input type="checkbox" name="checkboxG6" id="checkboxG6" class="css-checkbox" value='teen'>
+										<input type="checkbox" name="teen" id="checkboxG6" class="css-checkbox" value='teen'>
 										<label for="checkboxG6" class="css-label radGroup1 clr">Teen (13 - 19)</label>
 									</div>
 							    </div>
@@ -148,15 +148,15 @@
 							    <div class="grid__col grid__col--2-of-4">
 
 									<div class='input--item'>
-										<input type="checkbox" name="checkboxG1" id="checkboxG1" class="css-checkbox" value='young_adult'>
+										<input type="checkbox" name="young_adult" id="checkboxG1" class="css-checkbox" value='young_adult'>
 										<label for="checkboxG1" class="css-label radGroup1 clr">Young Adult (20 - 35)</label>
 									</div>
 									<div class='input--item'>
-										<input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" value='adult'>
+										<input type="checkbox" name="adult" id="checkboxG2" class="css-checkbox" value='adult'>
 										<label for="checkboxG2" class="css-label radGroup1 clr">Adult (35 - 65)</label>
 									</div>
 									<div class='input--item'>
-										<input type="checkbox" name="checkboxG3" id="checkboxG3" class="css-checkbox" value='older_adult'>
+										<input type="checkbox" name="older_adult" id="checkboxG3" class="css-checkbox" value='older_adult'>
 										<label for="checkboxG3" class="css-label radGroup1 clr">Older Adult (65+)</label>
 									</div>
 							    </div>
