Adds validation in app.js and updated views.py and urls.py to receive data from the application

--- a/member_form/static/member_form/stylesheets/style.css
+++ b/member_form/static/member_form/stylesheets/style.css
@@ -229,6 +229,18 @@ input[type=checkbox].css-checkbox {
 				-ms-user-select: none;
 				user-select: none;
 			}
+			
+			.blank label {
+			color:red;
+			}
+			
+			.blank input, .blank input:focus, .blank select, .blank select:focus {
+			border-color:red;
+			}
+			
+			.blank label:after {
+			content:" *";
+			}
 
 /* responsive media queries */
 
