--- a/member_form/templates/member_form/index.html
+++ b/member_form/templates/member_form/index.html
@@ -100,7 +100,7 @@
 							    </div>
 							    <div class="grid__col grid__col--2-of-6 width--mob">
 							      <label for='timezone' class='container__form__label container__form__label--ln smaller--orig'>Time Zone</label>
-							      <input type='text' class='container__form__input container__form__input--ln smaller--orig' id='timezone' name='timezone'>
+							      <input required type='text' class='container__form__input container__form__input--ln smaller--orig' id='timezone' name='timezone'>
 							    </div>
 							</div>
 					  	</div>
