Adds Antonio's new green logo and updated stylesheet to change hte background to the new color

--- a/member_form/templates/member_form/index.html
+++ b/member_form/templates/member_form/index.html
@@ -11,7 +11,7 @@
 		<div class="wrapper">
 				<div class="container">
 					<div class="container__header">
-						<img src='{% static 'member_form/media/delta_dental_logo.jpg' %}' class='container__header__logo'>
+						<img src='{% static 'member_form/media/delta_dental_logo_updated.png' %}' class='container__header__logo'>
 					</div>
 
 					<form class='container__form'>
