--- a/member_form/static/member_form/stylesheets/style.css
+++ b/member_form/static/member_form/stylesheets/style.css
@@ -33,7 +33,7 @@ body {
 
 .container__header {
 	width:100%;
-	background-color:#42AF4E;
+	background-color:#30B236;
 	text-align:center;
 	pointer-events:none;
 }
@@ -174,7 +174,7 @@ body {
 	-webkit-appearance:none;
 	border:0;
 	border-radius:3px;
-	background-color:#42AF4E;
+	background-color:#30B236;
 	color:white;
 	padding:8px 20px 8px 20px;	
 	font-size:1.1em;
